<resources>
    <string name="app_name">派格多宠物</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="skip">跳过</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="phone">手机号</string>
    <string name="verifyCode">验证码</string>
    <string name="verifyget">获取</string>
    <string name="login">登陆/注册</string>
    <string name="register">注册</string>

    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
