<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acitvity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <!--android:background="@mipmap/background_login" -->


    <LinearLayout
        android:layout_margin="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/et_password"
                android:password="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"/>
            <EditText
                android:id="@+id/et_phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:gravity="left"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/verifyCode"/>
            <EditText
                android:id="@+id/et_verifycode"
                android:layout_width="80dp"
                android:inputType="number"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/bt_verifyget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifyget"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_login2"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"/>
            <Button
                android:id="@+id/bt_register"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/register"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_cicle_shape"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:text="微信\n登录"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#88323232"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="正在登录..."/>
    </LinearLayout>
</RelativeLayout>